# Otus12_cpp

./: CMakeLists.txt  README.md  main.cpp  mapper.cpp  mapper.h  reducer.cpp  reducer.h  sorter.cpp  sorter.h  splitter.cpp  splitter.h  test_main.cpp
.github/workflows/: c-cpp.yml
